--- a/haulapp/haulistic/templates/haulistic/add_user.html
+++ b/haulapp/haulistic/templates/haulistic/add_user.html
@@ -1,4 +1,4 @@
-{% extends 'haulistic/base.html' %}
+{% extends 'haulistic/index.html' %}
 {% block content %}
 <form action="" method="post">
     {% csrf_token %}
