--- a/haulapp/haulistic/templates/haulistic/login.html
+++ b/haulapp/haulistic/templates/haulistic/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form action="" method="post">
     {% csrf_token %}
-    {{form}}
+    {{form.as_p}}
     <input type="submit" value="Submit">
 </form>
 {% endblock %}
