--- a/haulapp/haulistic/templates/haulistic/index.html
+++ b/haulapp/haulistic/templates/haulistic/index.html
@@ -4,36 +4,76 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title %}HAULISTic Welcome Page{% endblock %}</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'style_index.css'%}">
+	<link rel="icon" type="image/x-icon" href="{% static 'icon.png' %}">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-	<header class="hbar">
-		<a href="{% url 'index' %}"><img src="{% static 'logo.png' %}" alt="HAULISTic logo"></a>
-		<!--[przycisk do strony z logowaniem] -->
-		<a href="{% url 'login' %}" class="nav-link"><span>Log-in</span></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="{% url 'add-user' %}" class="nav-link"><span>Create an account</span></a>
-	</header>
+<body class="custom-pattern">
+	<nav id='menu'>
+		<input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+		<ul>
+			<li><a href="{% url 'login' %}">Log-In</a></li>
+			<li><a href="{% url 'add-user' %}">Create an account</a></li>
+		</ul>
+	</nav>
+	<a href="{% url 'index' %}" id="logo"><img src="{% static 'logo.png' %}" alt="HAULISTic logo" width="110" height="50"></a>
 	{% block content %} {% endblock %}
-	<section class="top-half">
-		<div>
-			<img src="{% static 'dashboard_0.jpg' %}" alt="dashboard screenshot">
+	<div id="wrapper">
+		<div id="contentliquid">
+			<div id="content" class="custom-bg-pattern">
+				<p>A no-nonsense web application for creating, storing and using shopping and To-Do lists. Create an account to try it yourself, or check out screenshots at the bottom of the page to get a general idea. Simple design, easy to use and no fees <em>hidden or not</em>. No ads, no tracking, no stealing or selling your data, as it's not being collected. Start now by creating an account and using it however you please.</p>
+			</div>
 		</div>
-		<div>
-			<p>Vestibulum eu felis risus. Donec pretium erat neque, id convallis risus facilisis nec. Nulla volutpat turpis mi, eu venenatis lacus pretium ac. Nam sit amet auctor libero. In tincidunt nec turpis in tempor. Proin sit amet libero a dolor porttitor gravida malesuada a augue. Proin vel dapibus arcu. Morbi lorem neque, bibendum feugiat elit vitae, euismod ornare ex. Cras faucibus urna ac diam suscipit, nec rutrum ante fermentum. Morbi eleifend vitae magna eget hendrerit. Mauris ut mi pretium enim iaculis condimentum ut non velit. Ut magna purus, vestibulum eu orci at, gravida suscipit est. Quisque at mollis purus, ut egestas ex. Mauris varius malesuada fermentum. Nulla in iaculis mi, euismod sodales sem.</p>
-			<!--	objaśnienie po krótce czym jest program	-->
+
+		<div id="leftcolumn"><img src="{% static 'dashboard.jpg' %}" alt="dashboard screenshot" width="100%" style="object-fit: scale-down"></div>
+	</div>
+	<div id="carouselExample" class="carousel slide mt-xl-0">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="{% static 'ss1.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'ss2.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'ss3.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'ss4.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'ss5.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'ss6.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
+			<div class="carousel-item">
+				<img src="{% static 'dashboard.jpg' %}" class="d-block w-100" alt="App Screenshot">
+			</div>
 		</div>
-	</section>
-	<section class="bottom-half">
-		<div>
-			{% comment %} <img src="{{}}">
-			<!--		karuzela screenów --> {% endcomment %}
-		</div>
-	</section>
-	<footer>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
+	</div>
+
+
+
+	<footer id="footer-ftw" style="color: #fff;	background-color: #4D9345;text-decoration: none;position: fixed;bottom: 0;width: 100%;height: 20px; ">
 		<center>
-			<h6>Created by Maciej Jankowski. &copy; {{now}}</h6>
+			<h6 style="font-size: 14px">Created by <a href="https://github.com/Unzajebable">Maciej Jankowski</a>. &copy; {{now}}</h6>
 		</center>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script href="{% static 'scripts.js'%}"></script>
 </body>
 
 </html>
+<!--{% static 'ss1.jpg' %}-->
