backend & frontend done, only tests to do

--- a/haulapp/haulistic/templates/haulistic/add_to_do_list_element.html
+++ b/haulapp/haulistic/templates/haulistic/add_to_do_list_element.html
@@ -5,7 +5,7 @@
 	<form action="" method="post" id="g-form" class="custom-bg-pattern" style="border-radius: 5%;padding: 2.5rem;font-weight: 700;box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);max-width: fit-content;margin: 0 auto;">
 		{% csrf_token %}
 		{{form.as_p}}
-		<button type="submit">Add Task</button>
+		<button type="submit">Confirm</button>
 	</form>
 </div>
 {% endblock %}
