--- a/haulapp/haulistic/static/style_base.css
+++ b/haulapp/haulistic/static/style_base.css
@@ -116,6 +116,16 @@ html {
 	background-color: darkgreen;
 }
 
+#id_completed {
+	cursor: pointer;
+	height: 40px;
+}
+
+#id_bought {
+	cursor: pointer;
+	height: 40px;
+}
+
 /*
 
 body {
@@ -310,7 +320,7 @@ body {
 
 .wrapper .sidebar {
 	width: 200px;
-	height: 100%;
+	height: 100vh;
 	background: linear-gradient(to bottom, #FFE317, #FBB052);
 	padding: 30px 0px;
 	position: fixed;
@@ -438,8 +448,8 @@ footer a {
 }
 
 .del-btn:hover {
-	color: #FFFFFF;
-	background: #FB5AB0;
+	color: #000;
+	background: #fc62f5;
 }
 
 table {
@@ -459,7 +469,9 @@ td {
 }
 
 th:nth-child(2),
-td:nth-child(2) {
+td:nth-child(2),
+th:nth-child(4),
+td:nth-child(4) {
 	background-color: rgba(218, 218, 218, 0.25);
 }
 
@@ -473,12 +485,12 @@ td a {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 100px;
 	border-radius: 4%;
 	padding: 2rem;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 	max-width: fit-content;
 	margin: 0 auto;
+	margin-top: 70px;
 }
 
 caption {
@@ -496,8 +508,9 @@ caption em {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-	margin-top: 150px;
-	margin: 30px;
+	margin-left: 30px;
+	margin-right: 30px;
+	margin-top: 80px;
 }
 
 .single {
@@ -506,4 +519,12 @@ caption em {
 	border-radius: 4%;
 	padding: 2.5rem;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+
+.strike td {
+	text-decoration: line-through;
+}
+
+.no-strike td {
+	text-decoration: none;
 }
