--- a/haulapp/haulistic/templates/haulistic/add_to_do_list_element.html
+++ b/haulapp/haulistic/templates/haulistic/add_to_do_list_element.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}Add A Task To Your List{% endblock %}
 {% block content %}
 <div class="gform" style="display: flex;justify-content: center;align-items: center; flex-direction: column;margin-top: 100px;">
 	<h1>"<a href="/list/to-do/{{list.id}}" style="text-decoration: none;color: #000">{{list.list_name}}</a>"</h1>
