--- a/haulapp/haulistic/templates/haulistic/add_to_do_list.html
+++ b/haulapp/haulistic/templates/haulistic/add_to_do_list.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}Create New To-Do List{% endblock %}
 {% block content %}
 <div class="gform" style="display: flex;justify-content: center;align-items: center; flex-direction: column;margin-top: 100px;">
 	<form action="" method="post" id="g-form" class="custom-bg-pattern" style="border-radius: 5%;padding: 2.5rem;font-weight: 700;box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);max-width: fit-content;margin: 0 auto;">
