--- a/haulapp/haulistic/templates/haulistic/all_shopping_lists.html
+++ b/haulapp/haulistic/templates/haulistic/all_shopping_lists.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}All Shopping Lists{% endblock %}
 {% block content %}
 <div class="generic-table custom-bg-pattern">
 	<table>
