--- a/haulapp/haulistic/templates/haulistic/all_to_do_lists.html
+++ b/haulapp/haulistic/templates/haulistic/all_to_do_lists.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}All To-Do Lists{% endblock %}
 {% block content %}
 <div class="generic-table custom-bg-pattern">
 	<table>
