--- a/haulapp/haulistic/templates/haulistic/edit_user.html
+++ b/haulapp/haulistic/templates/haulistic/edit_user.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}Edit Your Account{% endblock %}
 {% block content %}
 <div class="eform" style="display: flex;justify-content: center;align-items: center; flex-direction: column;margin-top: 100px;">
 	<form id="e-form" action="" method="post" class="custom-bg-pattern" style="border-radius: 5%;padding: 2.5rem;font-weight: 700;box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);max-width: fit-content;margin: 0 auto;">
