--- a/haulapp/haulistic/templates/haulistic/no_access.html
+++ b/haulapp/haulistic/templates/haulistic/no_access.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}No Access To View This{% endblock %}
 {% load static %}
 {% block content %}
 <div class="gform custom-bg-pattern" style="display: flex;justify-content: center;align-items: center; flex-direction: column;margin-top: 100px;border-radius: 5%;padding: 2.5rem;font-weight: 700;box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);max-width: fit-content;margin: 0 auto;">
