--- a/haulapp/haulistic/templates/haulistic/to_do_list_details.html
+++ b/haulapp/haulistic/templates/haulistic/to_do_list_details.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}To-Do List Details{% endblock %}
 {% block content %}
 <div class="generic-table custom-bg-pattern">
 	<table>
