--- a/haulapp/haulistic/templates/haulistic/user_list.html
+++ b/haulapp/haulistic/templates/haulistic/user_list.html
@@ -1,4 +1,5 @@
 {% extends 'haulistic/base.html' %}
+{% block title %}Users List{% endblock %}
 {% block content %}
 <div class="generic-table custom-bg-pattern">
 	<table>
