--- a/haulapp/haulistic/templates/haulistic/add_user.html
+++ b/haulapp/haulistic/templates/haulistic/add_user.html
@@ -33,7 +33,7 @@
 	</div>
 	<footer class="footer">
 		<center>
-			<h6>Created by Maciej Jankowski. &copy; {{now}}</h6>
+			<h6 style="font-size: 14px">Created by <a href="https://github.com/Unzajebable">Maciej Jankowski</a>. &copy; {{now}}</h6>
 		</center>
 	</footer>
 	<script href="{% static 'scripts.js'%}"></script>
