--- a/haulapp/haulistic/static/style_index.css
+++ b/haulapp/haulistic/static/style_index.css
@@ -46,8 +46,7 @@ h6 {
 	padding: 0;
 }
 
-/*
-#footer-ftw {
+.footer {
 	position: fixed;
 	bottom: 0;
 	padding-top: 5px;
@@ -57,9 +56,9 @@ h6 {
 	background-color: #4D9345;
 	text-decoration: none;
 }
-*/
 
-#footer-ftw a {
+#footer-ftw a,
+.footer a {
 	text-decoration: none;
 	color: #fff;
 }
